<resources>
    <string name="app_name">PicturePerfect</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_profile_settings">Settings</string>
    <string name="pictureperfect">PicturePerfect</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">No account yet? Register Now!</string>
    <string name="name">Full Name</string>
    <string name="register_btn">Register</string>
    <string name="register_account">Register Your Account</string>
    <string name="login_now">Have an account? Login here!</string>

    <string name="posts">Posts: </string>
    <string name="followers">Followers: </string>
    <string name="following">Following: </string>

    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    title_profile_settings
</resources>