<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingTop="55dp"
        android:paddingRight="25dp">

        <TextView
            android:id="@+id/text_picture_perfect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pictureperfect"
            android:textSize="36sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="18sp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:id="@+id/login_btn"
            android:text="@string/login"
            android:padding="12dp"
            android:background="@color/grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/register"
            android:textSize="16sp"
            android:id="@+id/link_signup"
            android:textColor="@color/link_blue"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>